src/shared/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  *,
  *::after,
  *::before {
    @apply m-0 p-0 border-0 box-border;
  }

  html,
  body {
    @apply min-h-screen min-w-full bg-zinc-1000 text-zinc-100 overflow-hidden;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  p,
  span,
  label {
    @apply text-zinc-100;
  }

  @media only screen and (max-width: 1080px) {
    html {
      font-size: 93.75%;
    }
  }

  @media only screen and (max-width: 720px) {
    html {
      font-size: 87.5%;
    }
  }

  html,
  body,
  div,
  span,
  applet,
  object,
  iframe,
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  p,
  blockquote,
  pre,
  a,
  abbr,
  acronym,
  address,
  big,
  cite,
  code,
  del,
  dfn,
  em,
  img,
  ins,
  kbd,
  q,
  s,
  samp,
  small,
  strike,
  strong,
  sub,
  sup,
  tt,
  var,
  b,
  u,
  i,
  center,
  dl,
  dt,
  dd,
  ol,
  ul,
  li,
  fieldset,
  form,
  label,
  legend,
  table,
  caption,
  tbody,
  tfoot,
  thead,
  tr,
  th,
  td,
  article,
  aside,
  canvas,
  details,
  embed,
  figure,
  figcaption,
  footer,
  header,
  hgroup,
  menu,
  nav,
  output,
  ruby,
  section,
  summary,
  time,
  mark,
  audio,
  video {
    @apply align-baseline;
  }
  /* HTML5 display-role reset for older browsers */
  article,
  aside,
  details,
  figcaption,
  figure,
  footer,
  header,
  hgroup,
  menu,
  nav,
  section {
    @apply block;
  }

  body {
    @apply leading-none;
  }

  ol,
  ul {
    @apply list-none;
  }

  blockquote,
  q {
    quotes: none;
  }

  blockquote:before,
  blockquote:after,
  q:before,
  q:after {
    @apply content-none;
  }
  table {
    @apply border-collapse border-spacing-0;
  }
}

